<resources>
    <string name="app_name">lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="email_hint">login name</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="button_name">Button 1</string>
    <string name="checkbox_name">Button 2</string>
    <string name="switch_name">Enable Something</string>
    <string name="title_activity_list_items">ListItemsActivity</string>
    <string name="title_activity_list_item">ListItemActivity</string>
</resources>
